Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadStatementInLambda.out
BadStatementInLambda.java:16:21: compiler.err.not.stmt
BadStatementInLambda.java:17:21: compiler.err.not.stmt
BadStatementInLambda.java:18:23: compiler.err.not.stmt
3 errors
